Se modificar vistas

--- a/WebApp/Views/ClientesDto/Delete.cshtml
+++ b/WebApp/Views/ClientesDto/Delete.cshtml
@@ -1,15 +1,22 @@
 ﻿@model WebApp.Dtos.ClienteDto
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Cliente";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Seguro que desea eliminar?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
+
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+        <input type="submit" value="Confirmar" class="btn btn-danger" />
+    </form>
+
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CedulaIdentidad)
@@ -53,18 +60,6 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Telefono)
         </dd>
-        @*<dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Genero)
-        </dt>
-        <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Genero.Descripcion)
-        </dd>
-        <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Nacionalidad)
-        </dt>
-        <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Nacionalidad.Descripcion)
-        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DomicilioAlternativo)
         </dt>
@@ -89,18 +84,6 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Scoring)
         </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EstadoCivil)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EstadoCivil.Descripcion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Persona)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Persona.CedulaIdentidad)
-        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DomicilioAlternativo)
         </dt>
@@ -143,12 +126,6 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MontoLiquidoPercibido)
         </dd>
-        @*<dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.EstadoCivil)
-        </dt>
-        <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.EstadoCivil.Descripcion)
-        </dd>*@
         
         @if (Model.ConyugeCedulaIdentidad != null)
         {
@@ -199,9 +176,4 @@
         }
     </dl>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
