--- a/WebApp/Views/ClientesDto/Edit.cshtml
+++ b/WebApp/Views/ClientesDto/Edit.cshtml
@@ -1,16 +1,23 @@
 ﻿@model WebApp.Dtos.ClienteDto
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Cliente";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+            <div class="form-group">
+                <div class="btn-group" role="group" aria-label="Agrupar Botones">
+                    <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+                    <button type="submit" class="btn btn-primary">Guardar</button>
+                </div>
+            </div>
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="PersonaId" />
@@ -150,15 +157,8 @@
                 <input asp-for="Scoring" class="form-control" />
                 <span asp-validation-for="Scoring" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
@@ -170,15 +170,7 @@
         var divConyuge = document.getElementById("EstadoCivilId");
         divConyuge.addEventListener("change",Refresh);
         Refresh();
-        /*
-        $(document).ready(function () {
-            //On Change
-            $('#EstadoCivilId').change(function () {
-                mostrarFormConguye();
-            });
-        });
-        */
-        //Funcion Calcular Cuota
+        //Funcion Estado Civil
         function Refresh() {
             $.ajax({
                 type: "POST",
