--- a/WebApp/Views/SolicitudesPrestamoDto/CreateStep2.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/CreateStep2.cshtml
@@ -1,16 +1,21 @@
 ﻿@model WebApp.Dtos.SolicitudPrestamoDto
 
 @{
-    ViewData["Title"] = "Create - Step 2";
+    ViewData["Title"] = "Nueva Solicitud Prestamo - Paso 2";
 }
 
-<h1>Create - Step 2</h1>
+<h1>Nueva</h1>
 
-<h4>SolicitudPrestamo - Paso 2</h4>
+<h4>Solicitud Prestamo - Paso 1</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <div class="btn-group" role="group" aria-label="Agrupar Botones">
+                <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+                <button type="submit" class="btn btn-primary">Guardar</button>
+            </div>
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ClienteId" />
             <input type="hidden" asp-for="ProductoId" />
@@ -98,16 +103,10 @@
                 </div>
                 
             }
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{
