--- a/WebApp/Views/SolicitudesPrestamoDto/Details.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/Details.cshtml
@@ -1,14 +1,20 @@
 ﻿@model WebApp.Dtos.SolicitudPrestamoDto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalle Solicitud Prestamo";
 }
 
-<h1>Details</h1>
+<h1>Detalle</h1>
 
 <div>
-    <h4>SolicitudPrestamo</h4>
+    <h4>Solicitud Prestamo</h4>
     <hr />
+
+    <div class="btn-group" role="group" aria-label="Agrupar Botones">
+        <a asp-action="Index" class="btn btn-secondary">Volver</a>
+        <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Editar</a>
+    </div>
+
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ClienteDto.CedulaIdentidad)
@@ -111,7 +117,4 @@
         </table>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
