--- a/WebApp/Views/ClientesDto/Create.cshtml
+++ b/WebApp/Views/ClientesDto/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebApp.Dtos.ClienteDto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nuevo Cliente";
 }
 
-<h1>Create</h1>
+<h1>Nuevo</h1>
 
 <h4>Cliente</h4>
 
@@ -12,6 +12,11 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <div class="btn-group" role="group" aria-label="Agrupar Botones">
+                <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+                <button type="submit" class="btn btn-primary">Guardar</button>
+            </div>
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CedulaIdentidad" class="control-label"></label>
@@ -147,15 +152,8 @@
                 <input asp-for="Scoring" class="form-control" />
                 <span asp-validation-for="Scoring" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
