--- a/WebApp/Views/ClientesDto/Index.cshtml
+++ b/WebApp/Views/ClientesDto/Index.cshtml
@@ -1,22 +1,26 @@
 ﻿@model IEnumerable<WebApp.Models.Cliente>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista de Clientes";
 }
 
-<h1>Index</h1>
+<h1>Lista de Clientes</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success text-white" >Nuevo Cliente</a>
 </p>
-<table class="table">
-    <thead>
+
+<table class="table table-striped">
+    <thead class="thead-dark">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.DomicilioAlternativo)
+                @Html.DisplayNameFor(model => model.Persona.CedulaIdentidad)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TelefonoLaboral)
+                @Html.DisplayNameFor(model => model.Persona.Apellido)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Persona.Nombre)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PersonaPoliticamenteExpuesta)
@@ -25,13 +29,7 @@
                 @Html.DisplayNameFor(model => model.Scoring)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UrlDocumento)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.EstadoCivil)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Persona)
             </th>
             <th></th>
         </tr>
@@ -41,10 +39,13 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DomicilioAlternativo)
+                    @Html.DisplayFor(modelItem => item.Persona.CedulaIdentidad)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.TelefonoLaboral)
+                    @Html.DisplayFor(modelItem => item.Persona.Apellido)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Persona.Nombre)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PersonaPoliticamenteExpuesta)
@@ -53,18 +54,14 @@
                     @Html.DisplayFor(modelItem => item.Scoring)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.UrlDocumento)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.EstadoCivil.Descripcion)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Persona.CedulaIdentidad)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <div class="btn-group" role="group" aria-label="Agrupar Botones">
+                        <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Editar</a>
+                        <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Detalle</a>
+                        <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Eliminar</a>
+                    </div>
                 </td>
             </tr>
         }
