--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -16,38 +16,43 @@
     <h1 class="display-4">Simulador de créditos</h1>
 </div>
 
-<div class="row d-flex d-flex align-content-between flex-wrap">
-    <div class="col-md-4">
-        <div class="form-group">
-            <label class="control-label" for="ProductoId">Tipo Crédito</label>
-            <select class="form-control" data-val="true" data-val-required="The Tipo Crédito field is required." id="ProductoId" name="ProductoId" asp-items="ViewBag.ProductoId"></select>
+<form>
+    <div class="form-row">
+        <div class="row d-flex d-flex align-content-between flex-wrap">
+            <div class="col">
+                <div class="form-group">
+                    <label class="control-label" for="ProductoId">Producto Crédito</label>
+                    <select class="form-control" data-val="true" id="ProductoId" name="ProductoId" asp-items="ViewBag.ProductoId"></select>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label class="control-label" for="MontoSolicitado">Monto Solicitado</label>
+                    <input class="form-control" type="number" placeholder="Ingrese Monto." id="MontoSolicitado" name="MontoSolicitado" value="100000">
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label class="control-label" for="CantidadCuotas">Cantidad de Cuotas</label>
+                    <input class="form-control" type="number" placeholder="Ingrese Cantidad Cuotas." id="CantidadCuotas" name="CantidadCuotas" value="12">
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label class="control-label" for="CostoTotalFinanciero">Costo Financiero Total</label>
+                    <input class="form-control" readonly="" type="number" id="CostoTotalFinanciero" name="CostoTotalFinanciero" value="0">
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label class="control-label" for="ValorCuota">Valor Cuota</label>
+                    <input class="form-control" readonly="" type="number" id="ValorCuota" name="ValorCuota" value="0">
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            <label class="control-label" for="MontoSolicitado">Monto Solicitado</label>
-            <input class="form-control" type="text" data-val="true" data-val-number="The field Monto Solicitado must be a number." data-val-required="The Monto Solicitado field is required." id="MontoSolicitado" name="MontoSolicitado" value="0">
-        </div>
-    </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            <label class="control-label" for="CantidadCuotas">Cantidad de Cuotas</label>
-            <input class="form-control" type="number" data-val="true" data-val-required="The Cantidad de Cuotas field is required." id="CantidadCuotas" name="CantidadCuotas" value="0">
-        </div>
-    </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            <label class="control-label" for="CostoTotalFinanciero">Costo Financiero Total</label>
-            <input class="form-control" readonly="" type="text" data-val="true" data-val-number="The field Costo Financiero Total must be a number." data-val-required="The Costo Financiero Total field is required." id="CostoTotalFinanciero" name="CostoTotalFinanciero" value="">
-        </div>
-    </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            <label class="control-label" for="ValorCuota">Valor Cuota</label>
-            <input class="form-control" readonly="" type="text" data-val="true" data-val-number="The field Valor Cuota must be a number." data-val-required="The Valor Cuota field is required." id="ValorCuota" name="ValorCuota" value="">
-        </div>
-    </div>
-</div>
+</form>
+
 <div class="text-center">
     <br />
     <p>La presente Simulación no implica obligación para de otorgamiento de crédito simulado. La aprobación de crédito simulado queda sujeta a la verificación de antecedentes comerciales del Cliente y al cumplimiento de las políticas de crédito vigentes a la fecha de evaluación del Crédito.</p>
@@ -73,6 +78,7 @@
                 calcularCuota();
             });
         });
+
         //Funcion Calcular Cuota
         function calcularCuota() {
             var montoSolicitado = parseFloat($("#MontoSolicitado").val());
@@ -80,7 +86,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "/Validator/GetCTFyValorCuota",
+                url: "/Validator/EvalSimulacion",
                 dataType: 'json',
                 data: { "productoId": $("#ProductoId").val()
                       , "montoSolicitado": $("#MontoSolicitado").val()
