--- a/WebApp/Views/ProductosDto/Delete.cshtml
+++ b/WebApp/Views/ProductosDto/Delete.cshtml
@@ -1,15 +1,22 @@
 ﻿@model WebApp.Dtos.ProductoDto
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Producto Financiero";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Seguro que desea eliminar?</h3>
 <div>
-    <h4>Producto</h4>
+    <h4>Producto Financiero</h4>
     <hr />
+
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+        <input type="submit" value="Confirmar" class="btn btn-danger" />
+    </form>
+
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
@@ -29,24 +36,6 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FechaFinVigencia)
         </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Beneficios)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Beneficios.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Requisitos)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Requisitos.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Terminos)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Terminos.Id)
-        </dd>*@
 
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Aprobacion24Horas)
@@ -173,9 +162,4 @@
 
     </dl>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
