--- a/WebApp/Views/ProductosDto/Details.cshtml
+++ b/WebApp/Views/ProductosDto/Details.cshtml
@@ -1,14 +1,20 @@
 ﻿@model WebApp.Dtos.ProductoDto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalle Producto Financiero";
 }
 
-<h1>Details</h1>
+<h1>Detalle</h1>
 
 <div>
-    <h4>Producto</h4>
+    <h4>Producto Financiero</h4>
     <hr />
+
+    <div class="btn-group" role="group" aria-label="Agrupar Botones">
+        <a asp-action="Index" class="btn btn-secondary">Volver</a>
+        <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Editar</a>
+    </div>
+
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
@@ -28,24 +34,6 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FechaFinVigencia)
         </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Beneficios)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Beneficios.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Requisitos)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Requisitos.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Terminos)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Terminos.Id)
-        </dd>*@
 
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Aprobacion24Horas)
@@ -171,8 +159,5 @@
         </dd>
 
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
 </div>
