--- a/WebApp/Views/SolicitudesPrestamoDto/CreateStep1.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/CreateStep1.cshtml
@@ -1,16 +1,22 @@
 ﻿@model WebApp.Dtos.SolicitudPrestamoDto
 
 @{
-    ViewData["Title"] = "Create - Step 1";
+    ViewData["Title"] = "Nueva Solicitud Prestamo - Paso 1";
 }
 
-<h1>Create - Step 1</h1>
+<h1>Nueva</h1>
 
-<h4>SolicitudPrestamo - Paso 1</h4>
+<h4>Solicitud Prestamo - Paso 1</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="CreateStep2">
+            <div class="btn-group" role="group" aria-label="Agrupar Botones">
+                <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+                <button type="submit" class="btn btn-primary">Paso 2</button>
+            </div>
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ClienteId" class="control-label"></label>
@@ -100,16 +106,10 @@
                 <label asp-for="CantidadAvales" class="control-label"></label>
                 <input asp-for="CantidadAvales" class="form-control" readonly />
             </div>
-            <div class="form-group">
-                <input type="submit" value="Step 2" class="btn btn-primary" />
-            </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{
