--- a/WebApp/Views/Admin/Create.cshtml
+++ b/WebApp/Views/Admin/Create.cshtml
@@ -9,8 +9,8 @@
 
 <form method="post">
     <div class="form-group">
-        <label asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" />
+        <label asp-for="UserName"></label>
+        <input asp-for="UserName" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Email"></label>
@@ -19,6 +19,10 @@
     <div class="form-group">
         <label asp-for="Password"></label>
         <input asp-for="Password" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="PhoneNumber"></label>
+        <input asp-for="PhoneNumber" class="form-control" />
     </div>
     <div class="form-group form-check">
         <label class="form-check-label">
