--- a/WebApp/Views/Admin/Index.cshtml
+++ b/WebApp/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IdentityUser>
+﻿@model IEnumerable<WebApp.Dtos.UserDto>
 @{
     ViewData["Title"] = "READ USER";
 }
@@ -9,17 +9,21 @@
 <table class="table table-sm table-bordered">
     <tr>
         <th>ID</th>
-        <th>Name</th>
+        <th>UserName</th>
         <th>Email</th>
+        <th>PhoneNumber</th>
+        <th>Role</th>
         <th>Update</th>
         <th>Delete</th>
     </tr>
-    @foreach (IdentityUser user in Model)
+    @foreach (var user in Model)
     {
         <tr>
             <td>@user.Id</td>
             <td>@user.UserName</td>
             <td>@user.Email</td>
+            <td>@user.PhoneNumber</td>
+            <td>@user.RoleDto.Name</td>
             <td>
                 <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">
                     Update
