--- a/WebApp/Views/Admin/Edit.cshtml
+++ b/WebApp/Views/Admin/Edit.cshtml
@@ -1,17 +1,15 @@
-﻿@model IdentityUser
+﻿@model WebApp.Dtos.UserDto
 @{
     ViewData["Title"] = "UPDATE USER";
 }
 
 <h1 class="bg-info text-white">Update User</h1>
 <a asp-action="Index" class="btn btn-secondary">Back</a>
-<div asp-validation-summary="All" class="text-danger"></div>
 
 <form asp-action="Edit" method="post">
-    <div class="form-group">
-        <label asp-for="Id"></label>
-        <input asp-for="Id" class="form-control" disabled />
-    </div>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="Id" />
+    <input type="hidden" asp-for="UserName" />
     <div class="form-group">
         <label asp-for="Email"></label>
         <input asp-for="Email" class="form-control" />
@@ -20,10 +18,18 @@
         <label for="password">Password</label>
         <input name="password" class="form-control" />
     </div>
+    <div class="form-group">
+        <label asp-for="PhoneNumber"></label>
+        <input asp-for="PhoneNumber" class="form-control" />
+    </div>
     <div class="form-group form-check">
         <label class="form-check-label">
             <input class="form-check-input" asp-for="EmailConfirmed" /> @Html.DisplayNameFor(model => model.EmailConfirmed)
         </label>
+    </div>
+    <div class="form-group">
+        <label asp-for="RoleId" class="control-label"></label>
+        <select asp-for="RoleId" class="form-control" asp-items="ViewBag.RoleId"></select>
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
