--- a/WebApp/Views/Admin/Index.cshtml
+++ b/WebApp/Views/Admin/Index.cshtml
@@ -8,7 +8,7 @@
 
 <table class="table table-sm table-bordered">
     <tr>
-        <th>ID</th>
+        @*<th>ID</th>*@
         <th>UserName</th>
         <th>Email</th>
         <th>PhoneNumber</th>
@@ -19,7 +19,7 @@
     @foreach (var user in Model)
     {
         <tr>
-            <td>@user.Id</td>
+            @*<td>@user.Id</td>*@
             <td>@user.UserName</td>
             <td>@user.Email</td>
             <td>@user.PhoneNumber</td>
