Se modificar descripciones campos de modelos

--- a/WebApp/Views/ClientesDto/Index.cshtml
+++ b/WebApp/Views/ClientesDto/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayNameFor(model => model.Scoring)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EstadoCivil)
+                @Html.DisplayNameFor(model => model.EstadoCivilId)
             </th>
             <th></th>
         </tr>
