--- a/WebApp/Views/SolicitudesPrestamoDto/Details.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/Details.cshtml
@@ -35,7 +35,7 @@
             @Html.DisplayFor(model => model.ClienteDto.Nombre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductoDto)
+            @Html.DisplayNameFor(model => model.ProductoId)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ProductoDto.Descripcion)
